--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ text-align: right
 .phoneImg {
     float: left;
 }
+.div_invitadas{
+    display: inline-block;
+    align-items: center;
+}
 .flex_container{
     display: flex;
     text-align: center;
