--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
     align-items: center;
     justify-content: space-around;
 }
-header .flex-container {
+header {
     max-width: 1440px;
     justify-content: space-between;
     align-items: center;
@@ -43,42 +43,42 @@ li {
     margin: 15px;
     display: inline-block;
 }
-.paragraph2 {
-    text-align: right
-    
-    }
-.container {
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 0 30px; 
-    align-items: center;
-    
-}
-.spotify {
-    display: flex;
-    justify-content: space-between;
-}
-.padding {
-    padding-top: 100px;
-}
 .fondo1 {
     background-color: blue;
     width: 100%;
 }
 .diagonal {
-    position: relative;
     margin-top: 191px;
     width: 100%;
     clip-path: polygon(0 22%, 100% 0, 100% 79%, 0% 100%);
 }
-.iframes {
+h2 {
+    left: 200px;
+    font-size: 64px;
+}
+.paragraph2 {
+    text-align: right
+    
+    }
+.container2 {
+    max-width: 1440px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+.iframe {
     width: 584px;
     height: 232px;
+    margin-bottom: 30px;
+    margin: 0 auto;
 }
 .phoneImg {
-    float: left;
+    width: 457px;
+    height: 660px;
 }
 .div_invitadas{
     display: inline-block;
@@ -87,4 +87,17 @@ li {
 .h2_invitadas {
     box-sizing: border-box;
     display: inline-block;
+}
+.background {
+    clip-path: polygon(0 82%, 100% 67%, 100% 100%, 0% 100%);
+    background: blue;
+}
+.container3 {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    max-width: 1440px;
+    margin: 0 auto;
+    clip-path: polygon(0 82%, 100% 67%, 100% 100%, 0% 100%);
+    background: blue;
+
 }
